feat: integrate B2 S3 storage service and refactor photo storage
- Added B2S3ClientConfig for S3 client configuration.
- Implemented B2PhotoStorageService for handling file storage in B2.
- Created LocalPhotoStorageService for local file storage fallback.
- Updated PhotoStorageService interface to include content type in storeFile method.
- Refactored PhotoService to utilize new storage services.
- Enhanced GalleryPhotoService and GalleryService to support new repository methods.
- Modified PhotoRestController to link saved photos to galleries.
- Updated ShareController to use StreamingResponseBody for photo downloads.
- Added entity graphs to AlbumRepository for optimized fetching.
- Improved error handling and response messages in controllers.
- Adjusted application.yml for detailed error messages.
- Updated gallery.html for proper redirection after uploads.